test/sh/error/func/bad_param_type.sk
external x(num: Int)

x(false)
